AC_INIT(configure.in)
AM_INIT_AUTOMAKE(libomxil-B, 0.2.9)
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL

CFLAGS="${CFLAGS=} -Wall -g"

# Check if Alsa sound library is present
AC_CHECK_LIB(asound, snd_pcm_plugin_init, [with_alsalibrary=true], [with_alsalibrary=false])
AC_CHECK_HEADER(alsa/asoundlib.h, [], [with_alsalibrary=false])
AM_CONDITIONAL(WITH_ALSASINK, test x$with_alsalibrary = xtrue)

#Check for ffmpeg components dependencies
AC_CHECK_LIB(avcodec, avcodec_decode_audio, [with_ffmpeglibrary=true], [with_ffmpeglibrary=false])
AC_CHECK_HEADER(ffmpeg/avcodec.h, [], [with_ffmpeglibrary=false])
AC_CHECK_HEADER(ffmpeg/avformat.h, [], [with_ffmpeglibrary=false])
AM_CONDITIONAL(WITH_FFMPEGLIBRARY, test x$with_ffmpeglibrary = xtrue)

#Check for mad components dependencies
AC_CHECK_LIB(mad, mad_header_decode, [with_madlibrary=true], [with_madlibrary=false])
AC_CHECK_HEADER(mad.h, [], [with_madlibrary=false])
AM_CONDITIONAL(WITH_MADLIBRARY, test x$with_madlibrary = xtrue)

#Check for glib components dependencies
AC_CHECK_LIB(glib-2.0, g_rand_new_with_seed_array, [with_glibrary=true], [with_glibrary=false])
AC_CHECK_HEADER(glib.h, [with_glibrary=true], [with_glibrary=false])
AM_CONDITIONAL(WITH_GLIBRARY, test x$with_glibrary = xtrue)

#Check whether ffmpeg components have been requested
AC_ARG_ENABLE(ffmpegcomponents,
  AC_HELP_STRING([--disable-ffmpegcomponents], [whether to disable ffmpeg components compilation]),
  [with_ffmpegcomponents=false],
  [with_ffmpegcomponents=true]) dnl default
AM_CONDITIONAL(WITH_FFMPEGCOMPONENTS, test x$with_ffmpegcomponents = xtrue && test x$with_ffmpeglibrary = xtrue)

#Check whether mad components have been requested
AC_ARG_ENABLE(madcomponents,
  AC_HELP_STRING([--disable-madcomponents], [whether to disable mad components compilation]),
  [with_madcomponents=false],
  [with_madcomponents=true]) dnl default
AM_CONDITIONAL(WITH_MADCOMPONENTS, test x$with_madcomponents = xtrue && test x$with_madlibrary = xtrue)

#Check whether alsa component has been requested
AC_ARG_ENABLE(alsacomponent,
  AC_HELP_STRING([--disable-alsacomponent], [whether to disable alsa component compilation]),
  [with_alsacomponent=false],
  [with_alsacomponent=true]) dnl default
AM_CONDITIONAL(WITH_ALSACOMPONENT, test x$with_alsacomponent = xtrue && test x$with_alsalibrary = xtrue)

#Check whether alsa component has been requested
AC_ARG_ENABLE(audioeffects,
  AC_HELP_STRING([--disable-audioeffects], [whether to disable the audio effects components compilation]),
  [with_audioeffects=false],
  [with_audioeffects=true]) dnl default
AM_CONDITIONAL(WITH_AUDIOEFFECTS, test x$with_audioeffects = xtrue)


AC_OUTPUT([
	Makefile		\
	libomxil.pc		\
	include/Makefile        \
	src/Makefile		\
	src/base/Makefile		\
	src/components/Makefile	\
	src/components/alsa/Makefile	\
	src/components/ffmpeg/Makefile	\
	src/components/mad/Makefile	\
	src/components/audio_effects/Makefile	\
	test/Makefile		\
	test/components/Makefile	\
	test/components/alsasink/Makefile \
	test/components/audio_effects/Makefile \
	test/components/ffmpeg/Makefile
])


